<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgrd2"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!--logo image-->

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/iconIv"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        />

    <!--App Name-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iconIv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/welcome_to_edu_solution_assistant"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <!--login button-->

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shape_button01"
        android:text="@string/login"
        android:layout_above="@+id/skipBtn"
        android:textColor="@color/white"
        tools:ignore="VisualLintButtonSize" />

    <!--skip button-->

    <Button
        android:id="@+id/skipBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/shaoe_button02"
        android:text="@string/continue_without_login"
        android:textColor="@color/purple_500"
        tools:ignore="TextContrastCheck,VisualLintButtonSize" />

</RelativeLayout>