<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgrd2"
    tools:context=".DashboardUser">

    <!--Status Bar-->

    <RelativeLayout
        android:id="@+id/toolbarRL"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/shape_toolbar02">

        <!--Displayed User's Name-->

        <TextView
            android:id="@+id/titleTv"
            style="@style/Dashboard_User"
            tools:ignore="RelativeOverlap"/>

        <!--Displayed Email of User-->

        <TextView
            android:id="@+id/subTitleTv"
            style="@style/Dashboard_UserName"/>

        <!--Logout Button-->

        <ImageButton
            android:id="@+id/logoutBtn"
            style="@style/Logout_Icon"
            tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbarRL"
        android:contentDescription="@string/todo">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--Card for Current Courses-->

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view1"
                style="@style/Dashboard_Card">

                <!--Text view of Current Course-->

                <TextView
                    android:id="@+id/text_box1"
                    android:text="@string/current_course"
                    style="@style/Dashboard_Card_Heading"/>

                <!--book button of Current Course-->

                <Button
                    android:id="@+id/card1btn1"
                    style="@style/Dashboard_Button_Start"
                    android:text="@string/books"
                    tools:ignore="DuplicateSpeakableTextCheck">

                </Button>

                <!--notes button of Current Course-->

                <Button
                    android:id="@+id/card1btn2"
                    style="@style/Dashboard_Button_Center"
                    android:text="@string/notes"
                    tools:ignore="DuplicateSpeakableTextCheck">

                </Button>

                <!--videos button of Current Course-->

                <Button
                    android:id="@+id/card1btn3"
                    style="@style/Dashboard_Button_End"

                    android:text="@string/videos"
                    tools:ignore="DuplicateSpeakableTextCheck">

                </Button>

            </androidx.cardview.widget.CardView>

            <!--Card for Future Courses-->

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view2"
                android:layout_below="@+id/card_view1"
                style="@style/Dashboard_Card">

                <!--Text view of Future Course-->

                <TextView
                    android:id="@+id/text_box2"
                    android:text="@string/future_course"
                    style="@style/Dashboard_Card_Heading" />

                <!--book button of Future Course-->

                <Button
                    android:id="@+id/card2btn1"
                    style="@style/Dashboard_Button_Start"
                    android:text="@string/books">

                </Button>

                <!--notes button of Future Course-->

                <Button
                    android:id="@+id/card2btn2"
                    style="@style/Dashboard_Button_Center"
                    android:text="@string/notes">

                </Button>

                <!--video button of Future Course-->

                <Button
                    android:id="@+id/card2btn3"
                    style="@style/Dashboard_Button_End"
                    android:text="@string/videos">

                </Button>

            </androidx.cardview.widget.CardView>

            <!--Card for Genre-->

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view3"
                android:layout_below="@+id/card_view2"
                style="@style/Dashboard_Card">

                <!--Text view of Genre-->

                <TextView
                    android:id="@+id/text_box3"
                    android:text="@string/genre"
                    style="@style/Dashboard_Card_Heading" />

                <!--book button of Genre-->

                <Button
                    android:id="@+id/card3btn1"
                    style="@style/Dashboard_Button_Start"
                    android:text="@string/books">

                </Button>

                <!--notes button of Genre-->

                <Button
                    android:id="@+id/card3btn2"
                    style="@style/Dashboard_Button_Center"
                    android:text="@string/notes">

                </Button>

                <!--videos button of Genre-->

                <Button
                    android:id="@+id/card3btn3"
                    style="@style/Dashboard_Button_End"
                    android:text="@string/videos">

                </Button>

            </androidx.cardview.widget.CardView>

            <!--Card for Search Bar-->

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view4"
                android:layout_below="@+id/card_view3"
                style="@style/Searchbar_Card"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <!--Search Bar-->

                <SearchView
                    android:id="@+id/search1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:queryHint="@string/books">

                </SearchView>

            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/imgvi"
                android:layout_width="1sp"
                android:layout_height="1sp"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
