<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgrd2"
    tools:context=".SignUpActivity">

    <!--Status Bar-->

    <RelativeLayout
        android:id="@id/toolbarRL"
        style="@style/Main_Frame">

        <!--back button-->

        <ImageButton
            android:id="@+id/backBtn"
            style="@style/Main_Frame_Back"
            tools:ignore="SpeakableTextPresentCheck"/>


        <!--logo image-->

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/iconIv"
            style="@style/Main_Frame_Logo"/>

        <!--New Account heading-->

        <TextView
            style="@style/Main_Frame_Heading"
            android:text="@string/create_new_account"/>

    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="40dp"
        android:layout_marginTop="225dp"
        android:layout_marginEnd="40dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--Name-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/nameEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext01"
                    android:drawableStart="@drawable/baseline_person_24"
                    android:drawablePadding="10dp"
                    android:hint="@string/name"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName|textCapWords"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey01"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck,VisualLintTextFieldSize">

                </EditText>


            </com.google.android.material.textfield.TextInputLayout>

            <!--email-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nameTil"
                android:layout_marginTop="5dp"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/emailEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext01"
                    android:drawableStart="@drawable/ic_email_grey"
                    android:drawablePadding="10dp"
                    android:hint="@string/email"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey01"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck,VisualLintTextFieldSize">

                </EditText>


            </com.google.android.material.textfield.TextInputLayout>

            <!--password-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/emailTit"
                android:layout_marginTop="5dp"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/passwordEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext01"
                    android:drawableStart="@drawable/baseline_lock_24"
                    android:drawablePadding="10dp"
                    android:hint="@string/password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey01"
                    tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />


            </com.google.android.material.textfield.TextInputLayout>

            <!--confirm password-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cpasswordTit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/passwordTit"
                android:layout_marginTop="5dp"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/cpasswordEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext01"
                    android:drawableStart="@drawable/baseline_lock_24"
                    android:drawablePadding="10dp"
                    android:hint="@string/confirm_password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey01"
                    tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />


            </com.google.android.material.textfield.TextInputLayout>

            <!--Register Button-->

            <Button
                android:id="@+id/registerBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cpasswordTit"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_button01"
                android:text="@string/register"
                android:textColor="@color/white"
                tools:ignore="VisualLintButtonSize" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>