<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgrd2"
    tools:context=".FpasswordActivity">

    <!--Status Bar-->

    <RelativeLayout
        android:id="@id/toolbarRL"
        style="@style/Main_Frame">

        <!--back button-->

        <ImageButton
            android:id="@+id/backBtn"
            style="@style/Main_Frame_Back"
            tools:ignore="SpeakableTextPresentCheck"/>

        <!--logo image-->

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/iconIv"
            style="@style/Main_Frame_Logo"/>

        <TextView
            style="@style/Main_Frame_Heading"
            android:text="@string/reset_password"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="40dp"
        android:layout_marginTop="225dp"
        android:layout_marginEnd="40dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--email-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/femailTit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/femailEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext01"
                    android:drawableStart="@drawable/ic_email_grey"
                    android:drawablePadding="10dp"
                    android:hint="@string/email"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey01"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck,VisualLintTextFieldSize">
                </EditText>

            </com.google.android.material.textfield.TextInputLayout>

            <!--Reset Button-->

            <Button
                android:id="@+id/Btn_reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/femailTit"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_button01"
                android:text="@string/reset"
                android:textColor="@color/white"
                tools:ignore="VisualLintButtonSize"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>